update BR2_EXTERNAL with libmetal and openamp support

--- a/buildroot-2024.11.1_rpi4_defconfig
+++ b/buildroot-2024.11.1_rpi4_defconfig
@@ -41,3 +41,5 @@ BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
 BR2_PACKAGE_HOST_KMOD_XZ=y
 BR2_PACKAGE_HOST_MTOOLS=y
+BR2_PACKAGE_LIBMETAL=y
+BR2_PACKAGE_OPENAMP=y
